# AutoHands

./: .gitignore  Cargo.toml  README.md
crates/autohands-api/: Cargo.toml
crates/autohands-api/src/: error.rs  lib.rs  runloop_bridge.rs  runloop_bridge_tests.rs  server.rs  state.rs
crates/autohands-api/src/http/: admin.rs  admin_tests.rs  handlers.rs  handlers_tests.rs  mod.rs  monitoring.rs  monitoring_tests.rs  openai_compat.rs  openai_compat_tests.rs  routes.rs  routes_tests.rs
crates/autohands-api/src/job/: definition.rs  mod.rs  routes.rs  routes_tests.rs  scheduler.rs  scheduler_tests.rs  store.rs  store_tests.rs
crates/autohands-api/src/webhook/: handler.rs  handler_tests.rs  mod.rs  registry.rs  registry_tests.rs  types.rs  types_tests.rs
crates/autohands-api/src/websocket/: channel.rs  channel_tests.rs  connection.rs  handler.rs  message.rs  mod.rs
crates/autohands-api/src/workflow/: definition.rs  definition_tests.rs  executor.rs  executor_tests.rs  executor_types.rs  mock_executor.rs  mod.rs  routes.rs  routes_tests.rs  store.rs  workflow_composite.rs  workflow_steps.rs
crates/autohands-checkpoint/: Cargo.toml
crates/autohands-checkpoint/src/: checkpoint.rs  config.rs  error.rs  lib.rs  recovery.rs  store.rs  store_tests.rs
crates/autohands-config/: Cargo.toml
crates/autohands-config/src/: error.rs  lib.rs  loader.rs  schema.rs  validator.rs  validator_tests.rs
crates/autohands-config/src/schema/: mod.rs  schema_infra.rs  schema_memory.rs  schema_tests.rs  schema_triggers.rs
crates/autohands-core/: Cargo.toml
crates/autohands-core/src/: context.rs  kernel.rs  kernel_tests.rs  lib.rs  lifecycle.rs  lifecycle_adapters.rs  lifecycle_tests.rs
crates/autohands-core/src/registry/: base.rs  base_tests.rs  channel.rs  channel_tests.rs  extension.rs  memory.rs  mod.rs  provider.rs  provider_tests.rs  tool.rs
crates/autohands-daemon/: Cargo.toml
crates/autohands-daemon/src/: config.rs  config_tests.rs  daemon.rs  daemon_impl.rs  daemon_status.rs  daemon_tests.rs  error.rs  health.rs  health_tests.rs  launchd.rs  lib.rs  pid.rs  pid_tests.rs  runloop.rs  runloop_tests.rs  signal.rs  signal_tests.rs  systemd.rs
crates/autohands-daemon/src/launchd/: launchd_agent.rs  launchd_config.rs  launchd_ops.rs  launchd_tests.rs  mod.rs
crates/autohands-daemon/src/systemd/: mod.rs  systemd_config.rs  systemd_ops.rs  systemd_service.rs  systemd_tests.rs
crates/autohands-macros/: Cargo.toml
crates/autohands-macros/src/: lib.rs
crates/autohands-macros/tests/: macro_tests.rs
crates/autohands-macros/tests/ui/: extension_basic.rs  extension_minimal.rs  extension_with_default_version.rs  extension_with_fields.rs
crates/autohands-monitor/: Cargo.toml
crates/autohands-monitor/src/: alert_channels.rs  alert_manager.rs  alerts.rs  alerts_tests.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  metrics_tests.rs
crates/autohands-protocols/: Cargo.toml
crates/autohands-protocols/src/: agent.rs  agent_tests.rs  channel.rs  channel_legacy.rs  channel_tests.rs  lib.rs  memory.rs  memory_tests.rs  skill.rs  skill_tests.rs
crates/autohands-protocols/src/error/: agent.rs  channel.rs  extension.rs  memory.rs  mod.rs  protocol.rs  provider.rs  provider_tests.rs  skill.rs  tool.rs
crates/autohands-protocols/src/extension/: context.rs  manifest.rs  manifest_tests.rs  mod.rs  task.rs  traits.rs
crates/autohands-protocols/src/provider/: mod.rs  model.rs  model_tests.rs  request.rs  request_tests.rs  response.rs  response_tests.rs  traits.rs
crates/autohands-protocols/src/tool/: context.rs  context_tests.rs  definition.rs  definition_tests.rs  mod.rs  result.rs  result_tests.rs  traits.rs  traits_tests.rs
crates/autohands-protocols/src/types/: common.rs  common_tests.rs  content.rs  (+4 more)
crates/autohands-runloop/: Cargo.toml
crates/autohands-runloop/src/: agent_driver.rs  agent_driver_impl.rs  agent_driver_tests.rs  agent_source.rs  agent_source_tests.rs  config.rs  correlation.rs  cron_timer.rs  cron_timer_tests.rs  error.rs  lib.rs  lib_tests.rs  metrics.rs  metrics_tests.rs  mode.rs  mode_tests.rs  observer.rs  observer_builtin.rs  observer_tests.rs  run_loop.rs  run_loop_accessors.rs  run_loop_execution.rs  run_loop_handlers.rs  run_loop_processing.rs  run_loop_task_dispatch.rs  run_loop_tests.rs  run_loop_traits.rs  run_loop_wakeup.rs  source.rs  spawner.rs  spawner_observer.rs  spawner_tests.rs  spawner_types.rs  task.rs  task_chain.rs  task_queue.rs  task_tests.rs  timer.rs  timer_tests.rs
crates/autohands-runloop/tests/: integration_test.rs
crates/autohands-runtime/: Cargo.toml
crates/autohands-runtime/src/: agent_loop.rs  agent_loop_tests.rs  checkpoint.rs  context_builder.rs  context_builder_tests.rs  file_session_store.rs  history.rs  lib.rs  memory_persistence.rs  memory_session_store.rs  retry.rs  retry_tests.rs  runtime.rs  runtime_impl.rs  runtime_tests.rs  session.rs  session_store.rs  session_store_tests.rs  streaming.rs  streaming_tests.rs  summarizer.rs  summarizer_tests.rs  transcript.rs  transcript_tests.rs
crates/autohands-workqueue/: Cargo.toml
crates/autohands-workqueue/src/: config.rs  error.rs  lib.rs  queue.rs  queue_tests.rs  store.rs  store_tests.rs  task.rs  worker.rs  worker_tests.rs
crates/extensions/agent-general/: Cargo.toml
crates/extensions/channel-web/: Cargo.toml
crates/extensions/channel-webhook/: Cargo.toml
crates/extensions/mcp-bridge/: Cargo.toml
crates/extensions/memory-hybrid/: Cargo.toml
crates/extensions/memory-markdown/: Cargo.toml
crates/extensions/memory-sqlite/: Cargo.toml
crates/extensions/memory-vector/: Cargo.toml
crates/extensions/provider-anthropic/: Cargo.toml
crates/extensions/provider-ark/: Cargo.toml
crates/extensions/provider-gemini/: Cargo.toml
crates/extensions/skills-bundled/: Cargo.toml
crates/extensions/skills-dynamic/: Cargo.toml
crates/extensions/tools-agent/: Cargo.toml
crates/extensions/tools-browser/: Cargo.toml
crates/extensions/tools-code/: Cargo.toml
crates/extensions/tools-cron/: Cargo.toml
crates/extensions/tools-desktop/: Cargo.toml
(+370 files in other folders)
