[package]
name = "autohands-config"
description = "Configuration management for AutoHands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
shellexpand = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
