[package]
name = "autohands-channel-web"
description = "Web channel for AutoHands - HTTP/WebSocket based communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
autohands-protocols = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Static file embedding
rust-embed = "8.5"

# Concurrent data structures
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = "0.24"
