[package]
name = "autohands-mcp-bridge"
description = "AutoHands extension: MCP (Model Context Protocol) bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
autohands-protocols = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
