[package]
name = "autohands-tools-desktop"
description = "AutoHands extension: Desktop automation tools (mouse, keyboard, screenshot)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
autohands-protocols = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Desktop automation
enigo = "0.2"
screenshots = "0.8"
arboard = "3.4"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
